--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,9 @@
+<h1><%= @user.username %></h1>
 
+<h4>Comments</h4>
+
+<% @user.posts.each do |post|%>
+    <p>
+        <%= link_to post.title, post_path(post) %>
+    </p>
+<% end %>
